sample/error/e02704-i.asn
E02704-I DEFINITIONS ::=
BEGIN
    setof SET OF INTEGER ::= {      -- E02704-I
        int 100, int 200, int 300
    }
END
